--- a/Web/multitracks.com/multitracks.com/Web.config
+++ b/Web/multitracks.com/multitracks.com/Web.config
@@ -4,9 +4,16 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-		<add name="admin" connectionString="[SQLConnectionStringHere]" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="admin" connectionString="Server=.;Initial Catalog=MultiTracks;Integrated Security=True;Max Pool Size=100;Pooling=True;" />
+  </connectionStrings>
+    <system.webServer>
+      <defaultDocument>
+        <files>
+          <add value="artistDetails.aspx" />
+        </files>
+      </defaultDocument>
+    </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
