--- a/Core/MTDataAccess/MTDataAccess.csproj
+++ b/Core/MTDataAccess/MTDataAccess.csproj
@@ -67,6 +67,9 @@
     <Compile Include="SQL.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
